# RAT-retrieval-augmented-thinking

./: README.md  pyproject.toml
jarvis/: __init__.py  jarvis.py
rat/: rat.py
